// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rubyPosition renders 0 1`] = `
Array [
  .c0 {
  ruby-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders function 1`] = `
Array [
  .c0 {
  ruby-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: has;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders invalid theme path 1`] = `
Array [
  .c0 {
  ruby-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders negative number 1`] = `
Array [
  .c0 {
  ruby-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  ruby-position: July;
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-position: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: July;
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-position: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-position: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    ruby-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    ruby-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  ruby-position: July;
}

@media May {
  .c0 {
    ruby-position: August;
  }
}

@media April {
  .c0 {
    ruby-position: September;
  }
}

@media January {
  .c0 {
    ruby-position: November;
  }
}

@media April {
  .c0 {
    ruby-position: August;
  }
}

@media June {
  .c0 {
    ruby-position: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: July;
}

@media May {
  .c0 {
    ruby-position: August;
  }
}

@media April {
  .c0 {
    ruby-position: September;
  }
}

@media January {
  .c0 {
    ruby-position: November;
  }
}

@media April {
  .c0 {
    ruby-position: August;
  }
}

@media June {
  .c0 {
    ruby-position: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-position: November;
  }
}

@media April {
  .c0 {
    ruby-position: January;
  }
}

@media January {
  .c0 {
    ruby-position: December;
  }
}

@media April {
  .c0 {
    ruby-position: April;
  }
}

@media June {
  .c0 {
    ruby-position: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-position: November;
  }
}

@media April {
  .c0 {
    ruby-position: January;
  }
}

@media January {
  .c0 {
    ruby-position: December;
  }
}

@media April {
  .c0 {
    ruby-position: April;
  }
}

@media June {
  .c0 {
    ruby-position: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    ruby-position: July;
  }
}

@media April {
  .c0 {
    ruby-position: August;
  }
}

@media January {
  .c0 {
    ruby-position: September;
  }
}

@media April {
  .c0 {
    ruby-position: November;
  }
}

@media June {
  .c0 {
    ruby-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    ruby-position: July;
  }
}

@media April {
  .c0 {
    ruby-position: August;
  }
}

@media January {
  .c0 {
    ruby-position: September;
  }
}

@media April {
  .c0 {
    ruby-position: November;
  }
}

@media June {
  .c0 {
    ruby-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-position: January;
  }
}

@media April {
  .c0 {
    ruby-position: December;
  }
}

@media January {
  .c0 {
    ruby-position: April;
  }
}

@media April {
  .c0 {
    ruby-position: May;
  }
}

@media June {
  .c0 {
    ruby-position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-position: January;
  }
}

@media April {
  .c0 {
    ruby-position: December;
  }
}

@media January {
  .c0 {
    ruby-position: April;
  }
}

@media April {
  .c0 {
    ruby-position: May;
  }
}

@media June {
  .c0 {
    ruby-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders postitive number 1`] = `
Array [
  .c0 {
  ruby-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders string 1`] = `
Array [
  .c0 {
  ruby-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: June;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyPosition renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`rubyPosition renders valid theme path 1`] = `
Array [
  .c0 {
  ruby-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
